Support Java 11 as well as Java 17